--- a/css/editor/callouts/callout-table-cards.css
+++ b/css/editor/callouts/callout-table-cards.css
@@ -6,6 +6,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   --table-background: rgba(var(--mono-rgb-0), 0.2);
   --table-row-alt-background: rgba(var(--mono-rgb-0), 0.2);
   --callout-blend-mode: normal;
+  --card-width: 14em;
   padding: 0;
   background: none;
   border: none;
@@ -26,7 +27,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 .callout[data-callout=table-cards] tbody {
   display: grid;
   gap: 0.6em;
-  grid-template-columns: repeat(auto-fill, 14em);
+  grid-template-columns: repeat(auto-fill, var(--card-width));
   justify-content: center;
 }
 .callout[data-callout=table-cards] tr {
