--- a/css/editor/lists/family-tree.css
+++ b/css/editor/lists/family-tree.css
@@ -8,10 +8,13 @@ body {
   --workleaves-foreground: var(--text-normal);
 }
 
+body {
+  --family-tree-connectors-color: var(--background-secondary);
+}
+
 ul:has(> li > .tag[href="#family-tree"]) {
   --list-spacing: 0;
   --list-indent: 0;
-  --connectors-color: var(--background-secondary);
   overflow-x: scroll;
 }
 ul:has(> li > .tag[href="#family-tree"]) li:has(> .tag[href="#family-tree"]) {
@@ -134,7 +137,7 @@ ul:has(> li > .tag[href="#family-tree"]) li::after {
   position: absolute;
   top: 0;
   right: 50%;
-  border-top: 1px solid var(--connectors-color);
+  border-top: 1px solid var(--family-tree-connectors-color);
   width: 50%;
   height: 10px;
 }
@@ -144,7 +147,7 @@ ul:has(> li > .tag[href="#family-tree"]) li:has(> .tag[href="#wed"])::after {
 ul:has(> li > .tag[href="#family-tree"]) li::after {
   right: auto;
   left: 50%;
-  border-left: 1px solid var(--connectors-color);
+  border-left: 1px solid var(--family-tree-connectors-color);
 }
 ul:has(> li > .tag[href="#family-tree"]) li:only-child::after,
 ul:has(> li > .tag[href="#family-tree"]) li:only-child::before {
@@ -166,7 +169,7 @@ ul:has(> li > .tag[href="#family-tree"]) ul::before {
   position: absolute;
   top: 0;
   left: 50%;
-  border-left: 1px solid var(--connectors-color);
+  border-left: 1px solid var(--family-tree-connectors-color);
   width: 0px;
   height: 20px;
   inset-inline-start: unset;
