--- a/css/editor/callouts/callout-comic.css
+++ b/css/editor/callouts/callout-comic.css
@@ -7,18 +7,18 @@ Author: ElsaTam (Kapirklaa in Discord)
   --gutter: 20px;
   --strip-height: 200px;
   --image-shadow-offset: 0;
-  --comic-color: 0, 0, 0;
-  --comic-background: 255, 255, 255;
+  --comic-color-rgb: 0, 0, 0;
+  --comic-background-rgb: 255, 255, 255;
   --callout-radius: 0;
   --callout-content-padding: var(--size-4-4);
   --callout-blend-mode: normal;
-  --callout-color: var(--comic-color);
+  --callout-color: var(--comic-color-rgb);
   --callout-border-width: 1px;
   --border-radius-0: 81% 3% 0px 0px / 3% 94% 0px 0px;
   --border-radius-1: 100% 4% 0px 0px / 6% 82% 0px 0px;
   --border-radius-2: 100% 3% 0px 0px / 3% 49% 0px 0px;
   --border-radius-3: 4% 30% 0px 0px / 51% 3% 0px 0px;
-  background: rgb(var(--comic-background));
+  background: rgb(var(--comic-background-rgb));
   font-family: "VTC Letterer Pro", "Comic Sans", "Arial", sans-serif;
 }
 
@@ -30,9 +30,9 @@ Author: ElsaTam (Kapirklaa in Discord)
 }
 
 .callout[data-callout=comic-panel] {
-  --callout-color: var(--comic-color);
+  --callout-color: var(--comic-color-rgb);
   --callout-padding: 0;
-  background: rgb(var(--comic-background));
+  background: rgb(var(--comic-background-rgb));
   margin: 0;
   position: relative;
   border: none;
@@ -47,9 +47,9 @@ Author: ElsaTam (Kapirklaa in Discord)
 }
 .callout[data-callout=comic-panel] > .callout-content > *:not(:has(img)) {
   position: absolute;
-  color: rgb(var(--comic-color));
-  background-color: rgb(var(--comic-background));
-  border-top: 1px solid rgb(var(--comic-color));
+  color: rgb(var(--comic-color-rgb));
+  background-color: rgb(var(--comic-background-rgb));
+  border-top: 1px solid rgb(var(--comic-color-rgb));
   left: 0;
   right: 0;
   bottom: 0;
@@ -81,7 +81,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   top: var(--g);
   bottom: calc(var(--g) + var(--s));
   left: var(--g);
-  border: 1px solid rgb(var(--comic-color));
+  border: 1px solid rgb(var(--comic-color-rgb));
   box-shadow: 1px 1px 0px 1px #000000;
 }
 .callout[data-callout=comic-panel][data-callout-metadata~=bubble][data-callout-metadata~=top] > .callout-content > *:not(:has(img)) {
@@ -140,7 +140,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 }
 .callout[data-callout=comic]:not([data-callout-metadata=straight]) > .callout-content > .callout[data-callout-metadata~=overflow] {
   border-image: none;
-  border: var(--b) solid rgb(var(--comic-color));
+  border: var(--b) solid rgb(var(--comic-color-rgb));
 }
 .callout[data-callout=comic]:not([data-callout-metadata=straight]) > .callout-content > .callout[data-callout-metadata~=overflow]:nth-child(4n) {
   border-radius: var(--border-radius-0);
@@ -156,7 +156,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 }
 
 .callout[data-callout=comic][data-callout-metadata=straight] > .callout-content > * {
-  border: 5px solid rgb(var(--comic-color));
+  border: 5px solid rgb(var(--comic-color-rgb));
 }
 
 body {
