--- a/css/editor/callouts/callout-full-width-image.css
+++ b/css/editor/callouts/callout-full-width-image.css
@@ -3,9 +3,9 @@ FAS - Callout Film strip
 Author: ElsaTam (Kapirklaa in Discord)
 */
 body {
-  --callout-ribbon-height: 70px;
-  --callout-ribbon-title-shadow: 0px 0px 0.1em rgb(var(--mono-rgb-0)), 0px 0px 0.2em rgb(var(--mono-rgb-0)), 0px 0px 0.5em rgb(var(--mono-rgb-0));
-  --callout-ribbon-title-blur: 5px;
+  --callout-fwi-height: 70px;
+  --callout-fwi-title-shadow: 0px 0px 0.1em rgb(var(--mono-rgb-0)), 0px 0px 0.2em rgb(var(--mono-rgb-0)), 0px 0px 0.5em rgb(var(--mono-rgb-0));
+  --callout-fwi-title-blur: 5px;
 }
 
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol]) {
@@ -21,7 +21,7 @@ body {
   font-size: 0;
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol]) img {
-  height: var(--callout-ribbon-height);
+  height: var(--callout-fwi-height);
   width: 100%;
   object-fit: cover;
 }
@@ -34,11 +34,11 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-shadow: var(--callout-ribbon-title-shadow);
+  text-shadow: var(--callout-fwi-title-shadow);
   z-index: 1;
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol])[data-callout-metadata~=blur] .callout-content {
-  filter: blur(var(--callout-ribbon-title-blur));
+  filter: blur(var(--callout-fwi-title-blur));
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol])[data-callout-metadata~=grayscale] img {
   filter: grayscale(1);
