--- a/scss/cssclasses/_sci-fi-banner.scss
+++ b/scss/cssclasses/_sci-fi-banner.scss
@@ -1,13 +1,16 @@
+body {
+    --sci-fi-arc-size: 400px;
+}
+
 .sci-fi-banner {
-    --arc-size: 400px;
     --inline-title-size: 3em;
     --inline-title-font: "Orbitron", Arial, serif;
 }
 
 .sci-fi-banner .inline-title {
     position: relative;
-    width: var(--arc-size);
-    height: var(--arc-size);
+    width: var(--sci-fi-arc-size);
+    height: var(--sci-fi-arc-size);
     display: flex;
     align-items: center;
 }
@@ -33,8 +36,8 @@
 .sci-fi-banner .inline-title::after {
     content: "";
     position: absolute;
-    width: calc(var(--arc-size) * 0.5);
-    height: calc(var(--arc-size) * 0.5);
+    width: calc(var(--sci-fi-arc-size) * 0.5);
+    height: calc(var(--sci-fi-arc-size) * 0.5);
     top: -5%;
     right: -10%;
     transform: rotate(-20deg);
