--- a/scss/editor/callouts/_callout-full-width-image.scss
+++ b/scss/editor/callouts/_callout-full-width-image.scss
@@ -1,7 +1,7 @@
 body {
-    --callout-ribbon-height: 70px;
-    --callout-ribbon-title-shadow: 0px 0px 0.1em rgb(var(--mono-rgb-0)), 0px 0px 0.2em rgb(var(--mono-rgb-0)), 0px 0px 0.5em rgb(var(--mono-rgb-0));
-    --callout-ribbon-title-blur: 5px;
+    --callout-fwi-height: 70px;
+    --callout-fwi-title-shadow: 0px 0px 0.1em rgb(var(--mono-rgb-0)), 0px 0px 0.2em rgb(var(--mono-rgb-0)), 0px 0px 0.5em rgb(var(--mono-rgb-0));
+    --callout-fwi-title-blur: 5px;
 }
 
 $aliases: ("full-width-image", "full-w-img", "fwi", "full-width-panoramic-image-:jack_o_lantern:", "fwpi-jol");
@@ -29,7 +29,7 @@ $sel: $sel + ")";
     }
 
     img {
-        height: var(--callout-ribbon-height);
+        height: var(--callout-fwi-height);
         width: 100%;
         object-fit: cover;
     }
@@ -44,12 +44,12 @@ $sel: $sel + ")";
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        text-shadow: var(--callout-ribbon-title-shadow);
+        text-shadow: var(--callout-fwi-title-shadow);
         z-index: 1;
     }
 
     &[data-callout-metadata~="blur"] .callout-content {
-        filter: blur(var(--callout-ribbon-title-blur));
+        filter: blur(var(--callout-fwi-title-blur));
     }
 
     &[data-callout-metadata~="grayscale"] img {
