--- a/scss/editor/callouts/_callout-letter.scss
+++ b/scss/editor/callouts/_callout-letter.scss
@@ -1,18 +1,24 @@
 @forward '../../shared/paper-texture';
 @forward '../../shared/workleaves';
 
+body {
+    --callout-letter-title-font: "Tangerine", "Brush Script MT", cursive;
+    --callout-letter-body-font: "Homemade Apple", "Comic Sans MS", cursive;
+}
+
 .callout[data-callout="letter"] {
     --callout-color: var(--color-yellow-rgb);
     --callout-title-size: 2em;
     --line-height-normal: 2.5;
     --font-text-size: 1.2em;
     --callout-icon-size: 1.2em;
+
     line-height: var(--line-height-normal);
     font-size: var(--font-text-size);
 
 
     .callout-title {
-        font-family: "Tangerine", "Brush Script MT", cursive;
+        font-family: var(--callout-letter-title-font);
         gap: 1rem;
     }
     .callout-icon {
@@ -54,7 +60,7 @@
     }
 
     .callout-content {
-        font-family: "Homemade Apple", "Comic Sans MS", cursive;
+        font-family: var(--callout-letter-body-font);
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.5) inset, 0 0 7px rgba(0, 0, 0, 0.5) inset;
     }
     :is(.fas-bg-textures .callout-content) {
