--- a/scss/editor/callouts/_callout-masonry.scss
+++ b/scss/editor/callouts/_callout-masonry.scss
@@ -1,3 +1,9 @@
+body {
+    --masonry-column-count: 4;
+    --masonry-row-height: 8rem;
+    --masonry-gap: 0.5rem;
+}
+
 .callout[data-callout="masonry"] {
     --callout-padding: 0;
     --callout-content-padding: 0;
@@ -10,8 +16,8 @@
     background: none;
 
     > .callout-content > p {
-        column-count: 4;
-        column-gap: 0.5rem;
+        column-count: var(--masonry-column-count);
+        column-gap: var(--masonry-gap);
     }
 
     > .callout-title { display: none; }
@@ -31,8 +37,8 @@
     }
 }
 @for $i from 2 to 10 {
-    .callout[data-callout="masonry"][data-callout-metadata~="col-#{$i}"] > .callout-content > p {
-        column-count: #{$i};
+    .callout[data-callout="masonry"][data-callout-metadata~="col-#{$i}"] {
+        --masonry-column-count: #{$i};
     }
 }
 
@@ -42,7 +48,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        gap: 0.5rem;
+        gap: var(--masonry-gap);
     }
 
     > .callout-content > p > * {
@@ -50,7 +56,7 @@
     }
 
     img {
-        height: 8rem;
+        height: var(--masonry-row-height);
         width: 100%;
         object-fit: cover;
     }
