--- a/scss/editor/callouts/_callout-polaroid.scss
+++ b/scss/editor/callouts/_callout-polaroid.scss
@@ -3,6 +3,7 @@
 body {
     --polaroid-angle: 2deg;
     --polaroid-img-size: 200px;
+    --polaroid-font: 'Walter Turncoat', cursive;
 }
 
 .callout[data-callout="polaroid"] {
@@ -29,7 +30,7 @@ body {
         color: var(--text-normal);
         background: none;
         justify-content: center;
-        font-family: 'Walter Turncoat', cursive;
+        font-family: var(--polaroid-font);
     }
 
     .callout-content {
