--- a/scss/editor/callouts/_callout-timeline.scss
+++ b/scss/editor/callouts/_callout-timeline.scss
@@ -20,8 +20,9 @@
 
     // cards
     --card-border-width: 5px;
-    --card-border-opacity: 1;
+    --card-border-opacity: 0.2;
     --card-padding: var(--size-4-3);
+    --card-width: 300px; // horizontal only
 
     // bullet
     --bullet-size: 8px;
@@ -35,9 +36,6 @@
     // segment
     --segment-border-color: rgb(var(--callout-color));
     --segment-thickness: 1px;
-}
-.callout[data-callout="timeline"][data-callout-metadata~="horizontal"] {
-    --cards-width: 300px;
 }
 
 // General styling
@@ -55,7 +53,7 @@
             --image-shadow-offset: 0;
             --s: var(--card-border-width);
             border: calc(2 * var(--s)) solid transparent;
-            outline: 1px dashed rgba(var(--callout-color), 0.2);
+            outline: 1px dashed rgba(var(--callout-color), var(--card-border-opacity));
             outline-offset: calc(-1*var(--s));
             background: conic-gradient(from 90deg at 1px 1px, transparent 25%, rgba(var(--callout-color), 0.4) 0);
             padding: var(--card-padding);
@@ -242,7 +240,7 @@
         position: relative;
         overflow: visible;
         margin-right: var(--col-gap);
-        width: var(--cards-width);
+        width: var(--card-width);
         z-index: 1;
     }
 
