--- a/snippets/editor/code/code-poem.css
+++ b/snippets/editor/code/code-poem.css
@@ -7,6 +7,11 @@ body {
   --workleaves-foreground: var(--text-normal);
 }
 
+body {
+  --poem-border-width: 1px;
+  --poem-color-rgb: var(--color-blue-rgb);
+}
+
 pre.language-poem,
 pre.language-poem-frame,
 pre.language-poem-floral {
@@ -22,7 +27,7 @@ pre.language-poem::before, pre.language-poem::after {
   left: 0;
   right: 0;
   height: var(--poem-border-width);
-  background: linear-gradient(to right, transparent, rgb(var(--poem-color)) 20%, rgb(var(--poem-color)) 80%, transparent);
+  background: linear-gradient(to right, transparent, rgb(var(--poem-color-rgb)) 20%, rgb(var(--poem-color-rgb)) 80%, transparent);
 }
 pre.language-poem::before {
   top: 0;
@@ -47,7 +52,7 @@ pre.language-poem-frame::before {
   left: 0;
   right: 0;
   height: unset;
-  background-color: rgb(var(--poem-color));
+  background-color: rgb(var(--poem-color-rgb));
   -webkit-mask-image: var(--top-divider-art);
   -webkit-mask-size: 100% auto;
   -webkit-mask-repeat: no-repeat;
@@ -62,7 +67,7 @@ pre.language-poem-frame:not(.is-collapsed)::after {
   left: 0;
   right: 0;
   height: unset;
-  background-color: rgb(var(--poem-color));
+  background-color: rgb(var(--poem-color-rgb));
   -webkit-mask-image: var(--bottom-divider-art);
   -webkit-mask-size: 60% auto;
   -webkit-mask-repeat: no-repeat;
@@ -81,11 +86,11 @@ pre.language-poem-floral {
 }
 pre.language-poem-floral > code {
   margin-inline: var(--floral-width);
-  border-left: var(--poem-border-width) solid rgba(var(--poem-color), 1);
+  border-left: var(--poem-border-width) solid rgba(var(--poem-color-rgb), 1);
   background-color: var(--workleaves-background);
   margin-inline: var(--floral-width);
-  border-left: var(--poem-border-width) solid rgba(var(--poem-color), 1);
-  border-bottom: var(--poem-border-width) solid rgba(var(--poem-color), 1);
+  border-left: var(--poem-border-width) solid rgba(var(--poem-color-rgb), 1);
+  border-bottom: var(--poem-border-width) solid rgba(var(--poem-color-rgb), 1);
   background-color: var(--workleaves-background);
   padding: var(--size-4-3);
 }
@@ -95,7 +100,7 @@ pre.language-poem-floral:not(.is-collapsed)::before, pre.language-poem-floral:no
   top: 0;
   bottom: 0;
   height: unset;
-  background-color: rgba(var(--poem-color), 0.6);
+  background-color: rgba(var(--poem-color-rgb), 0.6);
   -webkit-mask-image: var(--left-ornament-flourish), linear-gradient(to left, transparent, black 40%);
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: 100% auto;
