--- a/scss/editor/_aside.scss
+++ b/scss/editor/_aside.scss
@@ -1,12 +1,15 @@
 @forward '../shared/markdown-container';
 @forward '../shared/list-with-float';
 
-.markdown-preview-view aside,
-.markdown-preview-view .aside-left,
-.markdown-preview-view .aside-right {
+body {
     --aside-width: 250px;
     --aside-gap: 15px;
     --aside-border-thickness: 4px;
+}
+
+.markdown-preview-view aside,
+.markdown-preview-view .aside-left,
+.markdown-preview-view .aside-right {
     text-decoration: none;
     display: block;
     border-radius: var(--radius-l);
