--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -7,7 +7,7 @@
 @use 'headings/headings';
 @use 'horizontal_rule';
 @use 'image';
-@use 'link';
+@use 'links/link';
 @use 'lists/lists';
 @use 'properties';
 @use 'search-highlight';
