--- a/scss/editor/_properties.scss
+++ b/scss/editor/_properties.scss
@@ -2,7 +2,8 @@
 @forward '../shared/workleaves';
 
 @container metadata (width > 600px) {
-    .metadata-content {
+    .metadata-content:not(:has(.drag-ghost-hidden)) {
+        display: block;
         column-count: 2;
         column-rule: 1px dashed var(--metadata-border-color);
     }
